objects/PEPE_Event_Day__c.object
<CustomObject>
    <fields>
        <fullName>Event_Day_Agenda__c</fullName>
        <description>Event Day Agenda - In detail explanation of day</description>
        <inlineHelpText>Details of the day sessions</inlineHelpText>
        <label>Event Day Agenda</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEPE_Record_Type__c</fullName>
        <description>This will indicate the record type of related Training Event.</description>
        <formula>TEXT(Training_Event__r.PEPE_Record_Type__c)</formula>
        <label>PEPE Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Day__c</fullName>
        <description>Select the days from the available list</description>
        <inlineHelpText>Select the days from the available list</inlineHelpText>
        <label>Select Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event_Id__c</fullName>
        <description>Is used for event day lookup on the training event id.</description>
        <externalId>true</externalId>
        <label>Training Event Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>PEPE_Training_Event__c</referenceTo>
        <relationshipName>Day_Session_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This object us used for Session Slots Even Day grouping. Each Day can have multiple calendar session slots.</description>
    <label>Event Day</label>
    <nameField>
        <label>Day Session Slots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>